# course_cvdl

./: .gitignore  README.md
.github/workflows/: task1.yaml  task3.yaml
classes/: README.md
classes/c01/: c1.ipynb
classes/c02/: README.md  c2.ipynb
classes/c03/: README.md  c3.ipynb
classes/c04/: .gitignore  README.md  c04.ipynb
classes/c05/: c5.ipynb
classes/c06/: README.md  c6_empty.ipynb
classes/c07/: 1_Theory.ipynb  2_VIT.ipynb
classes/c08/: .gitignore  2_opencv_matching.ipynb  3_neural_matching.ipynb  README.md  SinkhornIterations.ipynb
classes/c09/: 2_DM.ipynb
classes/c10/: bmn_w_ac.py  mmaction_tutorial.ipynb
classes/c11/: inference.ipynb
task1/: .gitignore  README.md  pyproject.toml  setup.py
task2/: README.md  checks_notebook.ipynb  pyproject.toml  setup.py  train_cocotext.ipynb
task2/a4_course_cvdl_t2/: convert.py  loss.py  network.py
task2/a4_course_cvdl_t2/impl/: train.py
task2/a4_course_cvdl_t2/tests/: test_0backbone.py  test_1head.py  test_2convert.py  test_3loss.py  test_4network.py
task2/abbyy_course_cvdl_t2/: backbone.py  head.py  loss.py  network.py
task2/abbyy_course_cvdl_t2/impl/: train.py
task2/abbyy_course_cvdl_t2/tests/: obj_samples.py  test_0backbone.py  test_1head.py  test_2convert.py  test_3loss.py  test_4network.py
task3/: README.md  baseline_eval.ipynb  baseline_train.ipynb  pyproject.toml  setup.py
task3/a4_course_cvdl_t3/: coco_evaluation.py  compute_ap.py  utils.py
task3/abbyy_course_cvdl_t3/: coco_text.py  compute_ap.py  utils.py
task_project/: ProjectExamples.md  README.md
(+34 files in other folders)
