[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a4_course_cvdl_t3"
description = "Task3 for A4 CV DL course"
version = "0.2.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "editdistance",
    "requests"
]

[tool.hatch]
build.sources = ["."]
